# frictional-exciter

./: .gitignore
core_dsp/: A_Modal.cpp  A_Modal.h  B_SlipStick.cpp  B_SlipStick.h  C_Granular.cpp  C_Granular.h  DSPUtils.h  D_Noise.cpp  D_Noise.h  FrictionalEngine.cpp  FrictionalEngine.h  InputAnalyser.h  main.cpp
ml_pipeline/: 00_generate_calibration.py  01_generate_exciter.py  02_rate_ui.py  03_train.py
plugin/: CMakeLists.txt
plugin/Source/: PluginProcessor.cpp  PluginProcessor.h
tests/CPP/: test_main.cpp
